fixed spacing of section 1 and 2 on mobile view

--- a/less/index.less
+++ b/less/index.less
@@ -167,10 +167,23 @@ li {
 	.spacing-between();
 	flex-wrap: wrap;
 
+	@media(max-width: 500px) {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		padding: 20px 0 0 0;
+	}
+
 	div {
 		height: 72%;
 		border-bottom: solid 1px grey;
 		width: 100%;
+
+		@media(max-width: 500px) {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+		}
 
 		img {
 			width: 240px;
@@ -181,6 +194,10 @@ li {
 
 		h1 {
 			padding: 10px 0 20px 0;
+
+			@media(max-width: 500px) {
+				text-align: center;
+			}
 		}
 	}
 
@@ -213,12 +230,22 @@ li {
 	margin: 20px auto;
 	.spacing-between();
 
+	@media(max-width: 500px) {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
 	div {
 		height: 220px;
 		width: 48%;
 		display: flex;
 		flex-wrap: wrap;
 		align-content: space-between;
+
+		@media(max-width: 500px) {
+			width: 100%;
+			justify-content: center;
+		}
 
 		ul {
 			height: 80%;
